--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-homework-template",
+  "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://HannaMois.github.io/My-Portfolio/",
@@ -9,7 +9,11 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.10.1",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.0.5",
+    "swiper": "^10.2.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
